src/styles/InboxPage.css
.inbox-page {
  width: 100%;
  height: 100vh;
  background-color: var(--color-background);
  .title-bar {
    padding: 8px 24px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    .logo {
      font-size: 24px;
      .logo-icon {
        font-size: 32px;
        color: red;
      }
      display: flex;
      align-items: center;
      gap: 8px;
    }
    .debug-button {
      display: flex;
      justify-content: flex-end;
    }
  }
  .left-panel {
  }
}

